infra/kubernetes/gateway.yaml

apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - port: 80
  selector:
    app: gateway
